--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background: #f5f1fe;
+}
+
+.App-header {
+  text-align: center;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
