--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,1 +1,24 @@
+.Dictionary section {
+  background: radial-gradient(
+    circle at 11.7% 80.6%,
+    rgb(249, 185, 255) 0%,
+    rgb(177, 172, 255) 49.3%,
+    rgb(98, 203, 255) 89%
+  );
+  padding: 30px;
+  border-radius: 16px;
+  margin: 30px 0;
+  width: 50%;
+  margin-left: 300px;
+}
 
+.Dictionary input {
+  width: 100%;
+  padding: 5px 4px;
+  border: 1px solid #ddd;
+}
+
+.Dictionary .hints {
+  font-size: 11px;
+  margin-top: 5px;
+}
